{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "67fcb6b2-aa21-45f9-9c3d-5e9cc27150bf",
            "actions": [
                {
                    "name": "Recenter",
                    "type": "Button",
                    "id": "f2302cac-02da-4e16-a88f-2b48c57024ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9e8bfc4d-ebbb-4ca8-8c54-1e780eeb2d31",
                    "path": "<XRInputV1::Oculus::OculusTouchControllerOpenXR>{RightHand}/primarybutton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Recenter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "R_DirectionalContinuous",
            "id": "ff942b1e-9a9a-4e63-9770-08acce94f05c",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "PassThrough",
                    "id": "f4ff4a36-0c75-42f3-b658-3f7cb9997bf0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7583c655-a375-437b-8fb3-e45f36b28c87",
                    "path": "<OculusTouchController>{RightHand}/thumbstick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "R_ClickAndChoose",
            "id": "b6d58b59-41c4-4af2-9cd3-1cdad6dc93fe",
            "actions": [
                {
                    "name": "Direction",
                    "type": "PassThrough",
                    "id": "5c983441-e019-4fa1-a923-52954258e006",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d7a2acda-182a-4fc4-920b-cbce413ad186",
                    "path": "<OculusTouchController>{RightHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "R_HeadConverge",
            "id": "a625f997-fbfe-473d-a85b-5e2e95a7dac7",
            "actions": [
                {
                    "name": "Rotation Function",
                    "type": "Button",
                    "id": "0d1e7c27-a194-4d7c-93ce-ca70c67f6caa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c7b3795b-6951-447a-9b31-6db2c0ce8d0c",
                    "path": "<OculusTouchController>{RightHand}/triggerpressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation Function",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "R_DevMode",
            "id": "3d7b5b3b-ec71-4115-b0bc-05b1b29907a4",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "PassThrough",
                    "id": "5886205c-0bcb-45c3-8e68-508a4a6e2e9d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cff68692-83e5-417d-a1b0-7c743dbe8496",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "T_Directional",
            "id": "7f3b2bd5-91f0-43ba-b8f1-457832c9913e",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "8ebff63d-4238-4a40-a1d5-b916d4a9b1d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hand Orientation",
                    "type": "PassThrough",
                    "id": "3ed1dc9d-b3d2-444d-a464-e6ab7ab20102",
                    "expectedControlType": "Quaternion",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "Hand Position",
                    "type": "PassThrough",
                    "id": "5311ef21-460f-4d60-843f-21d0f04f9fec",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "da8f3660-eff7-4081-b53b-403c05053408",
                    "path": "<OculusTouchController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77e8e530-903b-4699-8db0-7073759b73ab",
                    "path": "<XRController>{LeftHand}/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hand Orientation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b103f794-b025-4ef5-bc33-de4903671f84",
                    "path": "<XRController>{LeftHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hand Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "T_DevMode",
            "id": "c4ca6ba0-5e42-4aa5-b453-b43e4ee39622",
            "actions": [
                {
                    "name": "Speed Boost",
                    "type": "Button",
                    "id": "9f2afb6e-20bb-4fd5-9069-7992fdbda30c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Translation X Axis",
                    "type": "Value",
                    "id": "bdab6c47-4071-4ca2-a7ef-fdbe126544d8",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Translation Y Axis",
                    "type": "Value",
                    "id": "5c12d18c-8918-4500-bd11-10ed081bb357",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Translation Z Axis",
                    "type": "Value",
                    "id": "421925c8-e403-4c26-81d7-1f0c11b34bea",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "94668135-e7fd-445d-9594-99abb5239736",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation X Axis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "60bd9fef-5314-4b38-8172-a624366faada",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation X Axis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c45bae8a-8ea9-4bc1-870b-de37007fda9a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation X Axis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "46231dd0-2dc2-443f-a1ab-135327eb924c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation Z Axis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6f062192-74f7-4feb-b9fb-61e0bfcdb345",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation Z Axis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "051c2123-42a7-4984-96de-8ca8218b04d9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation Z Axis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "3f8e6390-763b-43b7-82c2-f06f8f532096",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation Y Axis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3e65f159-3826-4332-a88b-3a5526efe600",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation Y Axis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "19de15b7-190a-4c6b-bd14-426790313572",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translation Y Axis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "54eff0e6-c4ef-4400-a114-eb49b4f8c0fc",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Speed Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<XRController>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}